# scilab-sivp

./: .travis.yml  AUTHORS  BUGS  BUILD_WIN32  ChangeLog  DESCRIPTION  FuncList  INSTALL  Makefile  Makefile.am  Makefile.in  Makelib  NEWS  OpenCVFunc  README  README.md  ScilabBugs  TODO  Untitled1.sce  aclocal.m4  builder.sce  config.status  configure  configure.ac  imgread.c  int_imgwrite.c  libtool  loader.sce  loader.sce.in  path.incl  sivp.c  sivp_common.c  sivp_common.h  sivp_formats.c  vdofinfo.c  vdoread.c  win-bin-builder.nsi
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
config/: sivp_xmltohtml.sci
demos/: Makefile.am  Makefile.in  bgfg.sce  camera.sce  camshift.sce  canny.sce  eye.sce  face.sce  image.sce  noise.sce  sivp.dem  sivp.dem.gateway.sce  sivp.dem.sce  video.sce
etc/: Makefile.am  Makefile.in  SIVP.quit  SIVP.start
help/: Makefile.am  Makefile.in  builder_help.sce  cleaner_help.sce
help/en_US/: .last_successful_build_javaHelp  addframe.xml  aviclose.xml  avicloseall.xml  avifile.xml  aviinfo.xml  avilistopened.xml  aviopen.xml  avireadframe.xml  build_help.sce  camopen.xml  camshift.xml  corr2.xml  detecteyes.xml  detectfaces.xml  detectforeground.xml  edge.xml  filter2.xml  fspecial.xml  hsv2rgb.xml  im2bw.xml  im2double.xml  im2int16.xml  im2int32.xml  im2int8.xml  im2uint16.xml  im2uint8.xml  imabsdiff.xml  imadd.xml  imcomplement.xml  imcrop.xml  imdivide.xml  imfilter.xml  imfinfo.xml  imhist.xml  imlincomb.xml  immultiply.xml  imnoise.xml  impyramid.xml  imread.xml  (+17 more)
images/: Makefile.am  Makefile.in  baboon.tiff  lena.tiff  peppers.tiff  walking.avi
macros/: Makefile  Makefile.am  Makefile.in  buildmacros.sce  char2double.sci  cleanmacros.sce  corr2.sci  detectfaces.sci  detectlefteyes.sci  detectrighteyes.sci  edge.sci  fspecial.sci  getSIVPpath.sci  hsv2rgb.sci  im2bw.sci  im2double.sci  im2int16.sci  im2int32.sci  im2int8.sci  im2uint16.sci  im2uint8.sci  imabsdiff.sci  imadd.sci  imcomplement.sci  imcrop.sci  imdivide.sci  imhist.sci  imlincomb.sci  immultiply.sci  imnoise.sci  imresize.sci  imshow.sci  imshow.tcl  imsubtract.sci  imwrite.sci  isbw.sci  long2double.sci  mat2gray.sci  mean2.sci  ntsc2rgb.sci  (+10 more)
man/: Makefile.am  Makefile.am.input  Makefile.in  adaptativethreshold.fr.xml  adaptativethreshold.xml  addframe.xml  aviclose.xml  avicloseall.xml  avifile.xml  aviinfo.xml  avilistopened.xml  aviopen.xml  avireadframe.xml  camopen.xml  camshift.xml  canny.fr.xml  canny.xml  cmp.fr.xml  cmp.xml  convert.fr.xml  convert.xml  corr2.xml  detecteyes.xml  detectfaces.xml  detectforeground.xml  dilate.fr.xml  dilate.xml  edge.xml  erode.fr.xml  erode.xml  filter2.xml  fspecial.xml  goodfeaturestotrack.fr.xml  goodfeaturestotrack.xml  hsv2rgb.xml  html-sivp.xsl  im2bw.xml  im2double.xml  im2int16.xml  im2int32.xml  (+69 more)
opencv/: License.txt
opencv/lib/: cv200.lib  cvaux200.lib  cxcore200.lib  cxts200.lib  highgui200.lib  ml200.lib
sci_gateway/: Makefile.am  builder.sce.in  builder_gateway.sce  config.h.in
sci_gateway/c/: builder_gateway_c.sce  camshift.c  cleaner.sce  common.c  detectforeground.c  detectobjects.c  dllSIVP.c  filter2.c  imabsdiff.c  imfilter.c  imfinfo.c  impyramid.c  imresize.c  imwrite.c  loader.sce  mat2utfimg.c  meanshift.c  sivp_init.c  test.c  videoio.c
sci_gateway/cpp/: addframe.cpp  aviclose.cpp  avicloseall.cpp  avifile.cpp  avilistopened.cpp  aviopen.cpp  builder_gateway_cpp.sce  camopen.cpp  camshift.cpp  canny.cpp  common.cpp  common.h  cvtcolor.cpp  detectforeground.cpp  detectobjects.cpp  dllSIVP.cpp  filter2.cpp  gw_sivp.h  imabsdiff.cpp  imadd.cpp  imdivide.cpp  imfilter.cpp  imfinfo.cpp  immultiply.cpp  impyramid.cpp  imread.cpp  imresize.cpp  imsubtract.cpp  imwrite.cpp  ind2rgb.cpp  mat2utfimg.cpp  meanshift.cpp  sivp_init.cpp  sobel.cpp  test.cpp  videoio.cpp
sivp/: Makelib  README  frame1.ppm  imgread.c
src/: Makefile  Makefile.am  Makefile.in  Makefile.win.in  adaptativethreshold.c  addframe.c  aviclose.c  avicloseall.c  avifile.c  aviinfo.c  avilistopened.c  aviopen.c  avireadframe.c  builder.sce.in  camopen.c  camshift.c  canny.c  cmp.c  common.c  common.h  config.h  config.h.in  convert.c  cvtcolor.c  detectfaces.c  dilate.c  erode.c  goodfeaturestotrack.c  hough.c  ilib_gen_gateway.sce  ilib_gen_gateway.sce.in  imabsdiff.c  imadd.c  imdivide.c  imfilter.c  imfinfo.c  immultiply.c  impyramid.c  imread.c  imresize.c  (+19 more)
src/.deps/: libsivp.P  test.P
tests/unit_tests/: avifile.dia.ref  avifile.tst  aviinfo.dia.ref  aviinfo.tst  avilistopened.dia.ref  avilistopened.tst  avireadframe.dia.ref  avireadframe.tst  detectfaces.dia.ref  detectfaces.tst  detectforeground.dia.ref  detectforeground.tst  detectlefteyes.dia.ref  detectlefteyes.tst  edge.dia.ref  filter2.tst  fspecial.dia.ref  fspecial.tst  hsv2rgb.dia.ref  imadd.dia.ref  imcomplement.dia.ref  imcomplement.tst  imcrop.dia.ref  imdivide.dia.ref  imfilter.tst  imfinfo.tst  imhist.dia.ref  imlincomb.dia.ref  imlincomb.tst  immultiply.dia.ref  imnoise.dia.ref  imnoise.tst  impyramid.dia.ref  impyramid.tst  imread.dia.ref  imread.tst  imresize.dia.ref  imshow.dia.ref  imshow.tst  imsubstract.tst  (+13 more)
