EXTRA_DIST = ChangeLog TODO BUGS COPYING INSTALL libtool Makefile.in NEWS README \
		builder.sce loader.sce \
		config/config.guess config/config.sub config/install-sh \
		config/ltmain.sh config/missing config/mkinstalldirs \
		config/sivp_xmltohtml.sci   \
		src/ilib_gen_gateway.sce

SUBDIRS = src macros man images

toolboxdir=@TOOLBOXDIR@
toolbox_DATA = loader.sce builder.sce
